--- a/frontend/src/pages/PatientPage/patientPage.css
+++ b/frontend/src/pages/PatientPage/patientPage.css
@@ -26,8 +26,9 @@
 
 .input-container{
     width:100%;
-    position: absolute;
+    /* position: absolute; */
     margin-top: 15px;
+    /* margin-bottom: 10%; */
     height: 40px;
     display: flex;
     flex-direction: column;
@@ -35,9 +36,9 @@
     
 }
 
-.search-icon{
+/* .search-icon{
     position: relative;
-}
+} */
 
 .doctor-name-input{
     position: relative;
@@ -47,15 +48,26 @@
     /* border: 1px solid #000000; */
     box-shadow: 0px 2px 2px 0px gray;
     width: 90%;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
    
 }
 .doctor-category-item {
     margin: 10px;
     list-style-type: none;
+    padding: 10px;
     width: 15%;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
+    border-radius: 50%;
 }
+
+.selected-category{
+    background-color: #24334d;
+    background-size: cover;
+    
+}
+
 .doctor-category-button{
     background-color: transparent;
     border: none;
@@ -67,7 +79,8 @@
 .doctor-category-image {
     width: 50px;
     height: 50px;
-    object-fit: cover;
+    /* object-fit: cover; */
+    /* border-radius: 50%; */
     align-self: center;
 }
 @media screen and (min-width:576px){
@@ -79,6 +92,7 @@
 .doctor-list{
     display:flex;
     flex-direction: column;
+
     padding: 5px;
     margin-top: 30px;
 }
@@ -93,15 +107,30 @@
 .doctor-card{
     list-style-type: none;
     height:10%;
-    background-color: #ffffff;
+    background-color: #24334d;
     padding: 10px;
+    padding-bottom: 15px;
     margin: 10px ;
-    border-radius: 5px;
+    border-radius: 10px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
     display: flex;
     
+    
 }
-
+@media screen and (min-width:576px){
+    .doctor-list{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+        margin-top: 50px;
+    }
+    .doctor-card{
+        width: 100%;
+        height: 100px;
+        
+    }
+}
 .doctor-card-image{
     height: 70px;
     width:70px;
@@ -110,8 +139,8 @@
     align-self: center;
 }
 .doctor-card-name {
-     color: #000000;
-    font-size:16px;
+     color: #ffffff;
+    font-size:14px;
     font-weight: 600;
 }
 .doctor-card-specialization{
@@ -126,4 +155,5 @@
     font-weight: 600;
     padding: 10px;
     width: fit-content;
+    border-radius: 15px;
 }
