--- a/frontend/src/pages/PatientAppointmentPage/patientAppointmentPage.css
+++ b/frontend/src/pages/PatientAppointmentPage/patientAppointmentPage.css
@@ -107,6 +107,31 @@
     
 } */
 
+.chat-button{
+    height: 50px;
+    width: 50px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    margin-right: 8px;
+
+}
+
+.chat-icon-image{
+    height: 50px;
+    width: 50px;
+}
+.chat-cancel-button{
+    border: none;
+    cursor: pointer;
+    background-color: transparent;
+    height: 20px;
+    width: 20px;
+}
+
+.chat-display-container{
+    align-self: flex-end;
+}
 @media screen and (min-width:576px){
     .rating-form{
         height: 100%; 
