--- a/frontend/src/pages/PatientPage/patientPage.css
+++ b/frontend/src/pages/PatientPage/patientPage.css
@@ -111,6 +111,7 @@
     padding: 10px;
     padding-bottom: 15px;
     margin: 10px ;
+   margin-right:20px;
     border-radius: 10px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
     display: flex;
@@ -129,6 +130,7 @@
         width: 100%;
         height: 100px;
         margin-right:10px;
+       margin-right:20px;
         
     }
 }
